--- a/index.html
+++ b/index.html
@@ -213,10 +213,17 @@
        <td>Aucune</td> 
      </tr>
     <tr class="warning">
-       <td>Bibliographie avec Zotero</td>
+       <td>Bibliographie avec Zotero (page Wikipedia)</td>
        <td>Aide à la thèse</td>
        <td>Gérer et centraliser des données bibliographiques et des documents de recherche</td>
        <td><a href="https://fr.wikipedia.org/wiki/Zotero">Lien</td> 
+       <td>Aucune</td> 
+     </tr>
+     <tr class="warning">
+       <td>Bibliographie avec Zotero (université du Québec)</td>
+       <td>Aide à la thèse</td>
+       <td>Gérer et centraliser des données bibliographiques et des documents de recherche</td>
+       <td><a href="http://carrefour.uquebec.ca/zotero">Lien</td> 
        <td>Aucune</td> 
      </tr>
     <tr class="light">
